--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,/* Property '...' has no initializer and is not definitely assigned in the constructor*/
+    "noImplicitAny": false,/*Parameter 'user_id' implicitly has an 'any' type.*/
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -27,6 +29,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictNullChecks": false,/*object is possibly 'null'*/
   }
 }
