--- a/package.json
+++ b/package.json
@@ -3,24 +3,33 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "postinstall": "ng build",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "dev": "ng serve --open --host=0.0.0.0 --port=5999 --disable-host-check",
     "test": "ng test"
+  },
+  "engines": {
+    "node": "v18.3.0",
+    "npm": "8.12.1"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
+    "@angular/animations": "^14.0.1",
     "@angular/cdk": "^14.0.1",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
+    "@angular/common": "^14.0.1",
+    "@angular/compiler": "^14.0.1",
+    "@angular/core": "^14.0.1",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.0.1",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/platform-browser": "^14.0.1",
+    "@angular/platform-browser-dynamic": "^14.0.1",
+    "@angular/router": "^14.0.1",
     "@ngrx/store": "^13.2.0",
+    "@ngrx/entity": "^13.2.0",
+    "@ngrx/effects": "^13.2.0",
+    "@ngrx/router-store": "^13.2.0",
+    "@ngrx/store-devtools": "^13.2.0",
     "bootstrap": "^5.1.3",
     "browser-detect": "^0.2.28",
     "express": "^4.18.1",
