--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "postinstall": "npm install --force && ng build",
+    "postinstall": "ng build",
     "build": "ng build",
     "dev": "ng serve --open --host=0.0.0.0 --port=5999 --disable-host-check",
     "test": "ng test"
