--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "ng test"
   },
   "engines": {
-    "node": "v18.3.0",
-    "npm": "8.12.1"
+    "node": "v16.15.1",
+    "npm": "8.11.0"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +44,7 @@
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
     "@types/jasmine": "~3.8.0",
+    "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
