--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -20,24 +20,21 @@ RUN git clone -b develop https://github.com/SauloMcChelsom/angular-state-managem
 WORKDIR /app
 RUN git pull
 RUN npm i
-# RUN rm -rf node_modules/
-# RUN rm -rf src/
-# RUN rm Dockerfile  
-# RUN rm angular.json            
-# RUN rm package-lock.json  
-# RUN rm server.js          
-# RUN rm tsconfig.json
-# RUN rm README.md          
-# RUN rm karma.conf.js  
-# RUN rm npm           
-# RUN rm package.json       
-# RUN rm tsconfig.app.json  
-# RUN rm tsconfig.spec.json
-RUN pwd
-RUN ls
+RUN rm -rf node_modules/
+RUN rm -rf docker/dev/
+RUN rm -rf src/
+RUN rm Dockerfile  
+RUN rm angular.json            
+RUN rm package-lock.json  
+RUN rm server.js          
+RUN rm tsconfig.json
+RUN rm README.md          
+RUN rm karma.conf.js  
+RUN rm npm           
+RUN rm package.json       
+RUN rm tsconfig.app.json  
+RUN rm tsconfig.spec.json
 WORKDIR /app/docker/prod
 RUN npm install express@4.18.1
-RUN pwd
-RUN ls
 CMD [ "sh", "-c", "node server.js"]
 EXPOSE 8080
