--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node docker/prod/server.js",
     "postinstall": "ng build",
     "build": "ng build",
     "dev": "ng serve --open --host=0.0.0.0 --port=8080",
