--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -28,12 +28,11 @@ RUN rm package-lock.json
 RUN rm tsconfig.json
 RUN rm README.md          
 RUN rm karma.conf.js  
-RUN rm npm      
-RUN rm server.js     
+RUN rm npm           
 RUN rm package.json       
 RUN rm tsconfig.app.json  
 RUN rm tsconfig.spec.json
-WORKDIR /app/docker/prod
+RUN npm init -y
 RUN npm install express@4.18.1
-CMD [ "sh", "-c", "node server.js"]
+CMD [ "sh", "-c", "npm run start"]
 EXPOSE 8080
